--- a/Server/package.json
+++ b/Server/package.json
@@ -1,62 +1,64 @@
 {
-	"name": "server",
-	"version": "1.0.0",
-	"description": "",
-	"scripts": {
-		"start": "ts-node src/index.ts",
-		"dev": "nodemon",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"test-client": "ts-node test-client.ts"
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"@sendgrid/mail": "^7.7.0",
-		"bcrypt": "^5.1.0",
-		"body-parser": "^1.20.1",
-		"connect-mongo": "^4.6.0",
-		"cors": "^2.8.5",
-		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
-		"express-session": "^1.17.3",
-		"express-validator": "^6.14.3",
-		"express-ws": "^5.0.2",
-		"helmet": "^6.0.1",
-		"http-proxy-middleware": "^2.0.6",
-		"jsonwebtoken": "^9.0.0",
-		"mongodb": "^4.13.0",
-		"mongoose": "^6.8.4",
-		"multer": "^1.4.5-lts.1",
-		"passport": "^0.6.0",
-		"passport-jwt": "^4.0.1",
-		"passport-local": "^1.0.0",
-		"socket.io": "^4.5.4",
-		"socket.io-client": "^4.6.1",
-		"uuid": "^9.0.0"
-	},
-	"devDependencies": {
-		"@types/bcrypt": "^5.0.0",
-		"@types/cors": "^2.8.13",
-		"@types/express": "^4.17.16",
-		"@types/express-session": "^1.17.5",
-		"@types/jsonwebtoken": "^9.0.1",
-		"@types/node": "^18.11.18",
-		"@types/passport": "^1.0.11",
-		"@types/passport-jwt": "^3.0.8",
-		"@types/passport-local": "^1.0.35",
-		"@types/uuid": "^9.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.49.0",
-		"@typescript-eslint/parser": "^5.49.0",
-		"eslint": "^8.32.0",
-		"eslint-config-prettier": "^8.6.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"nodemon": "^2.0.20",
-		"prettier": "^2.8.3",
-		"ts-node": "^10.9.1",
-		"typescript": "^4.9.4"
-	},
-	"optionalDependencies": {
-		"bufferutil": "^4.0.7",
-		"utf-8-validate": "^5.0.10"
-	}
+  "name": "server",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-client": "ts-node test-client.ts"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.14.3",
+    "express-ws": "^5.0.2",
+    "helmet": "^6.0.1",
+    "http-proxy-middleware": "^2.0.6",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.4",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.6.1",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.16",
+    "@types/express-session": "^1.17.5",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.11.18",
+    "@types/passport": "^1.0.11",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.7",
+    "utf-8-validate": "^5.0.10"
+  },
+  "main": "index.js",
+  "keywords": [],
+  "description": ""
 }
