--- a/Server/package.json
+++ b/Server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "dev": "nodemon",
+    "dev": "npx nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test-client": "ts-node test-client.ts"
   },
@@ -31,6 +31,7 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.6.1",
+    "ts-mailgun": "^0.5.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
