--- a/Server/package.json
+++ b/Server/package.json
@@ -23,7 +23,7 @@
     "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
-    "mongoose": "^6.8.4",
+    "mongoose": ">=6.11.3",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
