--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
 
           script: |
+            whoami
             docker stop $(docker ps -a -q)
             git pull
             cd Server
