update deploy yml file for simple deployment on prod

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
 
           script: |
-            whoami
             docker stop $(docker ps -a -q)
+            docker system prune -a
             cd BEARMAX-V2
             git pull
             cd Server
