fix docker run script so that workflow can end

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,4 @@ jobs:
             git pull
             cd Server
             docker build -t bearmax-backend .
-            docker run --rm --env-file .env -p 8080:8080 bearmax-backend
+            docker run -d -p 8080:8080 bearmax-backend
