--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,5 +27,5 @@ jobs:
             cd ../Client
             npm install
             npm run build
-            rm -r ~/var/www/bearmaxcare.com/html/*
+            rm -r /var/www/bearmaxcare.com/html/*
             mv dist/* /var/www/bearmaxcare.com/html
