remove changes each time a build is ran

--- a/.github/workflows/deployFrontend.yml
+++ b/.github/workflows/deployFrontend.yml
@@ -17,6 +17,8 @@ jobs:
 
           script: |
             cd BEARMAX-V2
+            git stash
+            git stash drop
             git pull
             cd Client
             npm install
