--- a/.github/workflows/deployFrontend.yml
+++ b/.github/workflows/deployFrontend.yml
@@ -25,3 +25,5 @@ jobs:
             npm run build
             rm -r /var/www/bearmaxcare.com/html/*
             mv dist/* /var/www/bearmaxcare.com/html
+            cd
+            rm -r BEARMAX-V2/Client/node_modules
