remove more node_modules folders to save space

--- a/.github/workflows/deployFrontend.yml
+++ b/.github/workflows/deployFrontend.yml
@@ -26,3 +26,5 @@ jobs:
             rm -r /var/www/bearmaxcare.com/html/*
             mv dist/* /var/www/bearmaxcare.com/html
             rm -r ~/BEARMAX-V2/Client/node_modules
+            rm -r ~/BEARMAX-V2/Client/dist
+            rm -r ~/BEARMAX-V2/node_modules
