--- a/Server/package.json
+++ b/Server/package.json
@@ -4,12 +4,18 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "test-client": "ts-node test-client.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/jest": "^29.5.11",
+    "@types/supertest": "^6.0.2",
+    "babel-jest": "^29.7.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "connect-mongo": "^4.6.0",
@@ -30,13 +36,14 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.6.1",
+    "supertest": "^6.3.4",
     "ts-mailgun": "^0.5.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.16",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.5",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
@@ -49,8 +56,10 @@
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prettier": "^2.8.3",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
