implement unit tests for no auth endpoints

--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "nodemon",
-    "test": "jest --coverage",
+    "test": "jest --coverage --forceExit --verbose",
     "test-client": "ts-node test-client.ts"
   },
   "author": "",
