--- a/Server/package.json
+++ b/Server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/storage-blob": "^12.17.0",
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-typescript": "^7.23.3",
@@ -46,6 +47,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.5",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.11",
     "@types/node": "^18.11.18",
     "@types/passport": "^1.0.11",
     "@types/passport-jwt": "^3.0.8",
