--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
 		"Server"
 	],
 	"devDependencies": {
+		"@vue/cli-plugin-router": "~5.0.0",
 		"cross-env": "^7.0.3"
 	},
 	"dependencies": {
-		"react-switch": "^7.0.0"
+		"react-switch": "^7.0.0",
+		"router": "^1.3.8",
+		"vue": "^3.4.15"
 	}
 }
