update backend deployment script

--- a/.github/workflows/deployBackend.yml
+++ b/.github/workflows/deployBackend.yml
@@ -17,8 +17,7 @@ jobs:
 
           script: |
             docker stop $(docker ps -a -q)
-            docker system prune -a
-            yes | head -1
+            docker system prune -a -f
             cd BEARMAX-V2
             git pull
             cd Server
