--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"cross-env": "^7.0.3"
 	},
 	"dependencies": {
+		"axios": "^1.6.7",
 		"react-switch": "^7.0.0",
 		"router": "^1.3.8",
 		"vue": "^3.4.15"
