--- a/Client/package.json
+++ b/Client/package.json
@@ -17,8 +17,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
+    "vue-chartkick": "^1.1.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
