--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
 	},
 	"dependencies": {
 		"@azure/storage-blob": "^12.17.0",
+		"chart.js": "^4.4.2",
 		"into-stream": "^8.0.1",
 		"js-cookie": "^3.0.5",
 		"mongoose": "^8.2.0",
 		"multer": "^1.4.5-lts.1",
 		"react-switch": "^7.0.0",
 		"typescript": "^5.3.3",
+		"vue-chartkick": "^1.1.0",
 		"vuex": "^4.1.0",
 		"vuex-persistedstate": "^4.1.0"
 	}
